update to post migration job config, small regex change