@@ -12,15 +12,15 @@ import org.springframework.batch.core.scope.context.ChunkContext;
 import org.springframework.batch.core.scope.context.StepContext;
 import org.springframework.batch.core.step.tasklet.Tasklet;
 import org.springframework.batch.repeat.RepeatStatus;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.Pageable;
 import org.springframework.transaction.PlatformTransactionManager;
+import uk.gov.hmcts.reform.preapi.batch.application.services.MigrationRecordService;
 import uk.gov.hmcts.reform.preapi.batch.application.services.migration.EntityCreationService;
 import uk.gov.hmcts.reform.preapi.batch.application.services.migration.MigrationTrackerService;
 import uk.gov.hmcts.reform.preapi.batch.application.services.persistence.InMemoryCacheService;
 import uk.gov.hmcts.reform.preapi.batch.application.services.reporting.LoggingService;
 import uk.gov.hmcts.reform.preapi.batch.application.writer.PostMigrationWriter;
 import uk.gov.hmcts.reform.preapi.batch.config.steps.CoreStepsConfig;
+import uk.gov.hmcts.reform.preapi.batch.entities.MigrationRecord;
 import uk.gov.hmcts.reform.preapi.batch.entities.PostMigratedItemGroup;
 import uk.gov.hmcts.reform.preapi.dto.BookingDTO;
 import uk.gov.hmcts.reform.preapi.dto.CaseDTO;
@@ -68,6 +68,8 @@ public class PostMigrationJobConfigTest {
     @Mock
     private MigrationTrackerService migrationTrackerService;
     @Mock
+    private MigrationRecordService migrationRecordService;
+    @Mock
     private CaseService caseService;
     @Mock
     private BookingService bookingService;
@@ -95,6 +97,7 @@ public class PostMigrationJobConfigTest {
             cacheService,
             entityCreationService,
             migrationTrackerService,
+            migrationRecordService,
             caseService,
             bookingService
         );
@@ -189,41 +192,42 @@ public class PostMigrationJobConfigTest {
 
     @Test
     void shareBookingsStep_handlesNoBookings() throws Exception {
-        CaseDTO caseDTO = createTestCase("REF4", UUID.randomUUID());
-        when(caseService.getCasesByOrigin(RecordingOrigin.VODAFONE)).thenReturn(List.of(caseDTO));
+        when(migrationRecordService.findShareableOrigs()).thenReturn(Collections.emptyList());
         when(cacheService.getAllChannelReferences()).thenReturn(Collections.emptyMap());
-        when(bookingService.findAllByCaseId(any(UUID.class), any(Pageable.class)))
-            .thenReturn(new PageImpl<>(Collections.emptyList()));
 
         Tasklet tasklet = getTaskletFromStep(config.createShareBookingsStep(postMigrationWriter));
         RepeatStatus result = tasklet.execute(stepContribution, chunkContext);
 
         assertThat(result).isEqualTo(RepeatStatus.FINISHED);
-        verify(loggingService).logWarning(eq("No bookings found for case %s (%s)"), eq("REF4"), any(UUID.class));
+        verify(loggingService).logInfo("Share booking creation complete. Total created: %d", 0);
+        verify(postMigrationWriter).write(any());
+        verify(entityCreationService, never()).createShareBookingAndInviteIfNotExists(any(), any(), any(), any());
     }
 
     @Test
-    void shareBookingsStep_createsShareBookingAndInvite() throws Exception {
-        UUID caseId = UUID.randomUUID();
-        CaseDTO caseDTO = createTestCaseWithParticipant("REF5", caseId, "John", "Doe");
-        BookingDTO booking = createTestBooking();
-        PostMigratedItemGroup migratedItem = mock(PostMigratedItemGroup.class);
+    void shareBookingsStep_createsShareBookingAndInvite() throws Exception {     
+        UUID bookingId = UUID.randomUUID();
+
+        MigrationRecord rec = new MigrationRecord();
+        rec.setArchiveId("ARCH123");
+        rec.setRecordingGroupKey("REF5|john|doe|2024-01-01"); 
+        rec.setBookingId(bookingId);
+
+        when(migrationRecordService.findShareableOrigs()).thenReturn(List.of(rec));
 
         Map<String, List<String[]>> channelUsersMap = Map.of(
-            "REF5.john.doe", new ArrayList<>() {
-                {
-                    add(new String[] { "john.doe", "john.doe@test.com" });
-                }
-            }
+            "REF5.john.doe.2024-01-01",
+            List.<String[]>of(new String[] { "john.doe", "john.doe@test.com" })
         );
-
-
-        when(caseService.getCasesByOrigin(RecordingOrigin.VODAFONE)).thenReturn(List.of(caseDTO));
         when(cacheService.getAllChannelReferences()).thenReturn(channelUsersMap);
-        when(bookingService.findAllByCaseId(eq(caseId), any(Pageable.class)))
-            .thenReturn(new PageImpl<>(List.of(booking)));
-        when(entityCreationService.createShareBookingAndInviteIfNotExists(any(), any(), any(), any()))
-            .thenReturn(migratedItem);
+
+        BookingDTO booking = createTestBooking();
+        when(bookingService.findById(bookingId)).thenReturn(booking);
+
+        PostMigratedItemGroup migratedItem = mock(PostMigratedItemGroup.class);
+        when(entityCreationService.createShareBookingAndInviteIfNotExists(
+            eq(booking), eq("john.doe@test.com"), eq("john"), eq("doe")
+        )).thenReturn(migratedItem);
 
         Tasklet tasklet = getTaskletFromStep(config.createShareBookingsStep(postMigrationWriter));
         RepeatStatus result = tasklet.execute(stepContribution, chunkContext);
@@ -232,8 +236,9 @@ public class PostMigrationJobConfigTest {
         verify(entityCreationService).createShareBookingAndInviteIfNotExists(
             eq(booking), eq("john.doe@test.com"), eq("john"), eq("doe")
         );
-        verify(postMigrationWriter).write(any());
+        verify(postMigrationWriter).write(any()); 
         verify(migrationTrackerService).writeNewUserReport();
+        verify(migrationTrackerService).writeShareBookingsReport();
     }
 
     @Test
